# NeedSpeedRead

./: CMakeLists.txt  README.MD
backend/: CMakeLists.txt
backend/include/backend/: document_controller.hpp
backend/src/: document_controller.cpp
core/: CMakeLists.txt
core/include/core/: document.hpp  parser.hpp
core/src/: document.cpp  parser.cpp
gui/: CMakeLists.txt  app.rc  main.cpp
gui/qml/: Main.qml
